--- a/1_准备工作/1.1_安装VSCode.md
+++ b/1_准备工作/1.1_安装VSCode.md
@@ -37,3 +37,41 @@
 搞定！
 
 ## 怎么运行第一行 Python 代码
+
+### 首先你需要安装一个 Python~
+
+是不是已经混乱了？这里我们可以稍微解释一下，编程可以理解为是用一种人类能看懂的语言，去指挥机器干活，那么这中间我们需要一个`翻译`！那么对于 python 这种语言，他需要的翻译就是一个 `python.exe`文件（当然这里只是为了便于理解，大佬勿喷）。
+
+![python.exe文件](1.1asset/image4.png)
+
+你可以有很多种方法获得到这个`.exe`文件，其中最简单的方式就是去[python 的官网](https://www.python.org)，或者去[下载页](https://www.python.org/downloads/)下载，这个步骤有太多[教程](https://blog.csdn.net/lvaolan8888/article/details/137744679)了，我就不赘述了。
+
+安装好以后，这些文件会安静地躺在 C 盘的角角落里（可以看到这个路径还是相当隐秘的），等你用它，而这时候，VSCode 就可以开始启动啦！
+
+![alt text](1.1asset/image5.png)
+
+### 最后安装两个插件
+
+打开 VSCode，点击左侧的四个正方形的按钮（扩展管理/插件管理），搜索这么几个插件：
+
+- Chinese
+- Python
+- Jupyter
+
+一般来说搜到的第一个就会是，但也可以注意一下出品方是不是 Microsoft，以及下载量大不大。
+
+![alt text](1.1asset/image6.png)
+
+![alt text](1.1asset/image7.png)
+
+![alt text](1.1asset/image8.png)
+
+## 写一行代码看下
+
+我们前面聊过，说 VSCode 有点像一个资源管理器。你打开这个插件以后，他还不知道你要去哪里写代码，所以第一步应该是选择一个路径（推荐找一个空的文件夹）。
+
+![alt text](1.1asset/image9.png)
+
+然后左边就会弹出来一个`资源管理器`，我们可以看到新建文件及新建文件夹的按钮，当然右键也是可以操作的。
+
+![alt text](1.1asset/image10.png)
