--- a/1_准备工作/1.1_安装VSCode.md
+++ b/1_准备工作/1.1_安装VSCode.md
@@ -7,6 +7,8 @@
 - 简单理解：一个可以运行 Python 的软件！
   ![VSCode 示例截图](1.1asset/image1.png)
 
+<img src="1.1asset/image1.png" alt="VSCode 示例截图" style="width: 200px;">
+
 ## 为什么用 VSCode
 
 在我使用过众多编译器后，我认为 Visual Studio Code ( VSCode ) 具有以下优点及特点：
@@ -44,7 +46,7 @@
 
 ![python.exe文件](1.1asset/image4.png)
 
-你可以有很多种方法获得到这个`.exe`文件，其中最简单的方式就是去[python 的官网](https://www.python.org)，或者去[下载页](https://www.python.org/downloads/)下载，这个步骤有太多[教程](https://blog.csdn.net/lvaolan8888/article/details/137744679)了，我就不赘述了。
+你可以有很多种方法获得到这个`.exe`文件，其中最简单的方式就是去[python 的官网](https://www.python.org)，或者去[下载页](https://www.python.org/downloads/)下载，如果遇到一些网络问题，还可以选择比如[阿里云镜像](https://mirrors.aliyun.com/python-release/)去选择合适的版本下载，这个步骤有太多[教程](https://blog.csdn.net/lvaolan8888/article/details/137744679)了，我就不赘述了。
 
 安装好以后，这些文件会安静地躺在 C 盘的角角落里（可以看到这个路径还是相当隐秘的），等你用它，而这时候，VSCode 就可以开始启动啦！
 
