补充代码运行

--- a/1_准备工作/1.1_安装VSCode.md
+++ b/1_准备工作/1.1_安装VSCode.md
@@ -75,3 +75,15 @@
 然后左边就会弹出来一个`资源管理器`，我们可以看到新建文件及新建文件夹的按钮，当然右键也是可以操作的。
 
 ![alt text](1.1asset/image10.png)
+
+我们新建了一个`a.py`文件，在里面稍微写了两行内容，保存后点击右上角的小箭头进行运行。（这个小箭头就是 VSCode 的 python 插件提供的功能，如果没找到的话，看看插件有没有安装，或者安装好了重启再试试）
+
+```python
+import os
+cwd = os.getcwd()
+print(cwd)
+```
+
+![alt text](1.1asset/image11.png)
+
+# 恭喜你，成功跑起来了第一行代码
